# vtb-stock

./: .editorconfig  Dockerfile  README.md  docker-compose.services.yml  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml
src/: alembic.ini
src/cars/: asgi.py
src/cars/application/: __init__.py  list_of_routers.py
src/cars/entrypoint/: __init__.py  app_factory.py  bindings.py
src/cars/scripts/: run-container.sh
src/catalog/: asgi.py
src/catalog/application/: __init__.py  list_of_routers.py
src/catalog/entrypoint/: __init__.py  app_factory.py  bindings.py  config.py
src/catalog/scripts/: initialize_es.py  initialize_fake_data.py  recreate_index.py  run-container.sh
src/gateway/: asgi.py
src/gateway/application/: __init__.py  error_handlers.py  list_of_routers.py
src/gateway/entrypoint/: __init__.py  app_factory.py  bindings.py  config.py
src/gateway/scripts/: run-container.sh
src/payment/: asgi.py
src/payment/application/: __init__.py  list_of_routers.py
src/payment/entrypoint/: __init__.py  app_factory.py  bindings.py  config.py
src/rental/: asgi.py
src/rental/application/: __init__.py  list_of_routers.py
src/rental/entrypoint/: __init__.py  app_factory.py  bindings.py  config.py
src/rental/scripts/: run-container.sh
src/shared_kernel/database/: sqlalchemy_mixin.py
src/stock/: asgi.py
src/stock/application/: __init__.py  error_handlers.py  list_of_routers.py
webclient/: .prettierrc  package-lock.json  package.json
webclient/src/: App.scss  App.tsx  index.css  index.scss  index.tsx
(+137 files in other folders)
