[tool.black]
line-length = 120
target-version = ['py39']

[tool.mypy]
ignore_missing_imports = true
python_version = 3.9

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.poetry]
name = "Microservices"
version = "0.0.1"
description = "BMSTU Lab 2"
authors = ["pavelnovojdarskij <pavel.novoydarskiy@bostongene.com>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.27"
uvicorn = "^0.15.0"
asyncpg = "^0.25.0"
marshmallow = "^3.14.1"
marshmallow-enum = "^1.5.1"
fastapi-utils = "^0.2.1"
alembic = "^1.7.5"
Inject = "^4.3.1"
loguru = "^0.5.3"
aiohttp = "^3.8.1"
elasticsearch = "^7.15.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-sugar = "^0.9.4"
pytest-postgresql = "^4.0.0"
pytest-asyncio = "^0.16.0"
psycopg = "^3.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
